--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publisher": "env-runner",
   "description": "快速启动前端不同环境",
   "icon": "images/logo.png",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "engines": {
     "vscode": "^1.87.2"
   },
@@ -25,6 +25,10 @@
         }
       ]
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wuqiaoli/env-runner.git"
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
